[gd_scene load_steps=2 format=3 uid="uid://b5kpwqa0yju1r"]

[ext_resource type="Script" path="res://assets/scripts/control.gd" id="1_hj8ea"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hj8ea")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileSystem" type="Tree" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
drop_mode_flags = 1

[node name="TabContainer" type="TabContainer" parent="HSplitContainer"]
layout_mode = 2
current_tab = 0
drag_to_rearrange_enabled = true

[node name="Welcome" type="Button" parent="HSplitContainer/TabContainer"]
layout_mode = 2
text = "Open File..."
metadata/_tab_index = 0

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(303, 180)
access = 2
use_native_dialog = true

[connection signal="tab_changed" from="HSplitContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="HSplitContainer/TabContainer/Welcome" to="." method="_on_welcome_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
